tests/error/tensor_errors/type_mismatch.err
Error: Type mismatch (at $FILE:9:26)
  | 
7 | @guppy
8 | def main() -> int:
9 |     return (foo, foo)(42, False)
  |                           ^^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
